--- a/Package.xml
+++ b/Package.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0"?>
 <Metadata xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-  <name>Fuuka's Expanded BGM select</name>
-  <id>nobodyinparticular,primogenitor.fuuka'sexpandedbgmselect</id>
+  <name>Fuuka's Expanded BGM</name>
+  <id>nobodyinparticular, Primogenitor.fuuka'sexpandedbgmselect</id>
   <author>Nobodyinparticular, Primogenitor, vim</author>
-  <version>3.3</version>
-  <link/>
+  <version>3.4</version>
+  <link>https://gamebanana.com/sounds/63622</link>
   <description>Adds more tracks to the BGM sub menu when exploring Tartarus.</description>
 </Metadata>
